@@ -44,36 +44,35 @@ public class DailyScrumServiceImpl implements DailyScrumService {
 
     @Override
     @Transactional(readOnly = true)
-    public List<DailyScrumInfoResponse> findDailyScrumInfoBySprintId(Long sprintId) {
-        //List Empty 가능
+    public List<DailyScrumResponse> findDailyScrumBySprintId(Long sprintId) {
         List<DailyScrum> dailyScrums = dailyScrumRepository.findDailyScrumBySprintId(sprintId);
-        return dailyScrums.stream().map(DailyScrumInfoResponse::of).collect(Collectors.toList());
+
+        return dailyScrums.stream()
+                .map(DailyScrumResponse::of)
+                .collect(Collectors.toList());
     }
 
     @Override
     @Transactional(readOnly = true)
     public List<DailyScrumUserResponse> findDailyScrumUserBySprintId(Long sprintId) {
         List<User> users = dailyScrumRepository.findUsersByDailyScrumId(sprintId);
-        return users.stream().map(DailyScrumUserResponse::of).collect(Collectors.toList());
+        return users.stream()
+                .map(DailyScrumUserResponse::of)
+                .toList();
     }
 
     @Override
     @Transactional(readOnly = true)
     public List<BacklogResponse> findBacklogByDailyScrumId(Long dailyScrumId) {
-        // 1. 중간 테이블(DailyScrumBacklog)에서 해당 DailyScrum과 연결된 Backlog 조회
-        List<DailyScrumBacklog> dailyScrumBacklogs = dailyScrumBacklogRepository.findByDailyScrumId(dailyScrumId);
-
-        // 2. Backlog 목록 변환 후 응답 DTO 생성
-        return dailyScrumBacklogs.stream()
-                .map(dsb -> BacklogResponse.of(dsb.getBacklog()))
-                .collect(Collectors.toList());
+        return dailyScrumBacklogRepository.findBacklogByDailyScrumId(dailyScrumId);
     }
 
     @Override
     @Transactional(readOnly = true)
-    public DailyScrumDetailResponse findContentByDailyScrumId(Long dailyScrumId) {
-        DailyScrum dailyScrum = dailyScrumRepository.findById(dailyScrumId).orElseThrow(() -> new RuntimeException("Daily scrum not found"));
-        return DailyScrumDetailResponse.of(dailyScrum);
+    public String findContentByDailyScrumId(Long dailyScrumId) {
+        return dailyScrumRepository.findById(dailyScrumId)
+                .orElseThrow(() -> new RuntimeException("Daily scrum not found"))
+                .getContent();
     }
 
     //02.23) 해당 요일에 걸려있는 DailyScrum이 2개일 수 있어서 일단 List로 해놓음
@@ -86,9 +85,9 @@ public class DailyScrumServiceImpl implements DailyScrumService {
 
     @Override
     public void createDailyScrum(Long sprintId) {
-        Sprint sprint = sprintRepository.findById(sprintId).orElseThrow(() -> new SprintNotFoundException());
-        Long currentUserId = Long.parseLong(securityUtil.getCurrentUserId().orElseThrow(() -> new UserNotHereException()));
-        User user = userRepository.findById(currentUserId).orElseThrow(() -> new UserNotHereException());
+        Sprint sprint = sprintRepository.findById(sprintId).orElseThrow(SprintNotFoundException::new);
+        Long currentUserId = Long.parseLong(securityUtil.getCurrentUserId().orElseThrow(UserNotHereException::new));
+        User user = userRepository.findById(currentUserId).orElseThrow(UserNotHereException::new);
         // 1. DailyScrum 엔티티 생성
         DailyScrum dailyScrum = DailyScrum.builder()
                 .sprint(sprint)
@@ -104,18 +103,13 @@ public class DailyScrumServiceImpl implements DailyScrumService {
     }
 
     @Override
-    public void removeBacklog(Long dailyScrumId, Long backlogId) {
-        // DailyScrumBacklog에서 해당 관계 찾기
-        DailyScrumBacklog dailyScrumBacklog = dailyScrumBacklogRepository.findByDailyScrumAndBacklog(dailyScrumId, backlogId)
-                .orElseThrow(() -> new NoDataFoundException("해당 DailyScrum과 Backlog의 연결이 없습니다."));
-
-        // 관계 삭제
-        dailyScrumBacklogRepository.delete(dailyScrumBacklog);
+    public void removeBacklogFromDailyScrum(Long dailyScrumId, Long backlogId) {
+        dailyScrumBacklogRepository.deleteByDailyScrumDailyScrumIdAnd(dailyScrumId, backlogId);
     }
 
 
     @Override
-    public BacklogResponse addBacklogToDailyScrum(Long dailyScrumId, Long backlogId) {
+    public void addBacklogToDailyScrum(Long dailyScrumId, Long backlogId) {
         // DailyScrum 찾기
         DailyScrum dailyScrum = dailyScrumRepository.findById(dailyScrumId)
                 .orElseThrow(() -> new NoDataFoundException("해당 DailyScrum이 없습니다. id: " + dailyScrumId));
@@ -124,12 +118,9 @@ public class DailyScrumServiceImpl implements DailyScrumService {
         Backlog backlog = backlogRepository.findById(backlogId)
                 .orElseThrow(() -> new NoDataFoundException("해당 Backlog가 없습니다. id: " + backlogId));
 
-        // DailyScrumBacklog 관계 저장
-        DailyScrumBacklog dailyScrumBacklog = DailyScrumBacklog.builder().dailyScrum(dailyScrum).backlog(backlog).build();
-        dailyScrumBacklogRepository.save(dailyScrumBacklog);
+        dailyScrum.addBacklog(backlog);
+        dailyScrumRepository.save(dailyScrum);
 
-        // 응답 DTO 변환 후 반환
-        return BacklogResponse.of(backlog);
     }
 
     @Override
@@ -168,20 +159,15 @@ public class DailyScrumServiceImpl implements DailyScrumService {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new NoDataFoundException("해당 User가 없습니다. id: " + userId));
 
-        // UserDailyScrum 관계 저장
-        UserDailyScrum userDailyScrum = UserDailyScrum.builder()
-                .user(user)
-                .dailyScrum(dailyScrum)
-                .build();
-        userDailyScrumRepository.save(userDailyScrum);
+        dailyScrum.addUser(user);
+        dailyScrumRepository.save(dailyScrum);
 
-        // 응답 DTO 변환 후 반환
         return DailyScrumUserResponse.of(user);
     }
 
     @Override
     public void removeUserFromDailyScrum(Long dailyScrumId, Long userId) {
-        // UserDailyScrum에서 해당 관계 찾기
+        // UserDailyScrum 에서 해당 관계 찾기
         UserDailyScrum userDailyScrum = userDailyScrumRepository.findByDailyScrumIdAndUserId(dailyScrumId, userId)
                 .orElseThrow(() -> new NoDataFoundException("해당 DailyScrum과 User의 연결이 없습니다."));
 
@@ -190,17 +176,13 @@ public class DailyScrumServiceImpl implements DailyScrumService {
     }
 
     @Override
-    public DailyScrumDetailResponse updateContent(Long dailyScrumId, String content) {
+    public void updateContent(Long dailyScrumId, String content) {
         // DailyScrum 찾기
         DailyScrum dailyScrum = dailyScrumRepository.findById(dailyScrumId)
                 .orElseThrow(() -> new NoDataFoundException("해당 DailyScrum이 없습니다. id: " + dailyScrumId));
 
         // 내용 업데이트
         dailyScrum.setContent(content);
-        dailyScrumRepository.save(dailyScrum);
-
-        // 응답 DTO 변환 후 반환
-        return DailyScrumDetailResponse.of(dailyScrum);
     }
 
 
